fix: [KAN-40] add client path param
