# server/docs/swagger.json
@@ -4,7 +4,7 @@
         "contact": {}
     },
     "paths": {
-        "/user-ms/v1/login": {
+        "/user-ms/v1/{client}/login": {
             "post": {
                 "description": "Authenticates a user with their email and password and returns a token.",
                 "consumes": [
@@ -26,6 +26,17 @@
                         "schema": {
                             "$ref": "#/definitions/data.UserVO"
                         }
+                    },
+                    {
+                        "enum": [
+                            "customer",
+                            "merchant"
+                        ],
+                        "type": "string",
+                        "description": "Client identifier",
+                        "name": "client",
+                        "in": "path",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -86,13 +97,26 @@
                 }
             }
         },
-        "/user-ms/v1/logout": {
+        "/user-ms/v1/{client}/logout": {
             "post": {
                 "description": "invalidates the user's auth token cookie.",
                 "tags": [
                     "Authentication"
                 ],
                 "summary": "User Logout",
+                "parameters": [
+                    {
+                        "enum": [
+                            "customer",
+                            "merchant"
+                        ],
+                        "type": "string",
+                        "description": "Client identifier",
+                        "name": "client",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK"
@@ -100,7 +124,7 @@
                 }
             }
         },
-        "/user-ms/v1/users": {
+        "/user-ms/v1/{client}/users": {
             "post": {
                 "description": "This endpoint allows a new user to register by providing their details in JSON format.",
                 "consumes": [
@@ -122,6 +146,17 @@
                         "schema": {
                             "$ref": "#/definitions/data.UserVO"
                         }
+                    },
+                    {
+                        "enum": [
+                            "customer",
+                            "merchant"
+                        ],
+                        "type": "string",
+                        "description": "Client identifier",
+                        "name": "client",
+                        "in": "path",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -137,7 +172,7 @@
                 }
             }
         },
-        "/user-ms/v1/users/activate": {
+        "/user-ms/v1/{client}/users/activate": {
             "put": {
                 "description": "This endpoint allows a new user to activate by providing their verification code in JSON format.",
                 "consumes": [
@@ -159,6 +194,17 @@
                         "schema": {
                             "$ref": "#/definitions/data.UserActivateReq"
                         }
+                    },
+                    {
+                        "enum": [
+                            "customer",
+                            "merchant"
+                        ],
+                        "type": "string",
+                        "description": "Client identifier",
+                        "name": "client",
+                        "in": "path",
+                        "required": true
                     }
                 ],
                 "responses": {
